--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "apollo-server": "^3.11.1",
-    "apollo-server-core": "^3.11.1",
-    "graphql": "^16.6.0"
+    "graphql-yoga": "^1.18.3"
   }
 }
